# claude-damn

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  ROADMAP.md  copilot-setup-steps.yml  keybindings.json  pyproject.toml  ruff.toml  settings.json  sync-theme.sh  ty.toml
.claude-plugin/: plugin.json
.claude/commands/: cost-opt.md
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
commands/: continue.md  cost-opt.md  cost.md  cost_.md  draft-cmt-msg-4-below.md  expert-review.md  review.md
cost-log/: extract_cost.py
docs/: index.html
hooks/: block-inline-scripts.py  constants.py  hooks.json
rules/: PERSONALIZATION.example.md
scripts/: test-isolated.sh
skills/: README.md
skills/_shared/: __init__.py  anchor.py  parse_git.py  parse_shelf.py  slugify.py
skills/add-to-roadmap/: SKILL.md
skills/address-pr-feedback/: SKILL.md
skills/atlas/: __init__.py
skills/cat/: SKILL.md
skills/check-yourself/: SKILL.md
skills/checkpoint-resume/: SKILL.md
skills/checkpoint-save/: SKILL.md
skills/continue/: SKILL.md
skills/cost-opt/: SKILL.md
skills/cost_/: SKILL.md
src/: analyze_perms.py  com.claude.sync-theme.plist  extract_cost.py  statusline-command.sh  sync-theme.sh
tests/: _skill_helpers.py  conftest.py  test_analyze_perms.py  test_checkpoint_archive.bats  test_extract_cost.py  test_extract_cost_coverage.py  test_hook_inline_scripts.py  test_permissions.py  test_pyproject.py  test_settings_structure.py  test_skill_helpers.py  test_sync_theme.bats
(+177 files in other folders)
