[project]
name = "claude-damn"
version = "0.1.0"
description = "Claude Code superpowers plugin"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]


[dependency-groups]
dev = ["pytest-xdist>=3.8.0"]


[tool.pytest.ini_options]
pythonpath = ["."]