[project]
name = "claude-damn"
version = "0.2.0"
description = "Claude Code superpowers plugin"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]