[project]
name = "claude-damn"
version = "0.2.0"
description = "Claude Code superpowers plugin"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
addopts = "-m 'not smoke and not performance'"
markers = [
    "smoke: live skill invocation tests (cost tokens, non-deterministic)",
    "performance: stress test matrix (18 combos, expensive, non-deterministic)",
]

# You can customize specific typing diagnostic levels here ("error", "warn", "ignore")
# Example:
# missing-return = "warn"
# index-out-of-bounds = "ignore"